--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "@chainsafe/libp2p-noise": "^8.0.0",
     "@libp2p/mplex": "^5.0.0",
     "@libp2p/tcp": "^3.0.3",
-    "libp2p": "^0.37.3"
+    "libp2p": "^0.37.3",
+    "multiaddr": "^10.0.1"
   },
   "type": "module"
 }
